--- a/app/src/main/res/layout/buy_inputs_address.xml
+++ b/app/src/main/res/layout/buy_inputs_address.xml
@@ -58,7 +58,7 @@
                     android:paddingEnd="15dp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/textColorSecondary"
-                    android:fontFamily="@font/montserrat"
+                    android:fontFamily="@font/josefin_sans"
                     android:textColorHint="@color/textColorPrimaryLight"
                     />
 
@@ -77,7 +77,7 @@
                     android:paddingEnd="15dp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/textColorSecondary"
-                    android:fontFamily="@font/montserrat"
+                    android:fontFamily="@font/josefin_sans"
                     android:textColorHint="@color/textColorPrimaryLight"
                     />
 
@@ -112,7 +112,7 @@
                         android:paddingTop="0dp"
                         android:paddingBottom="0dp"
                         android:text="@string/save_address"
-                        android:fontFamily="@font/montserrat"
+                        android:fontFamily="@font/josefin_sans"
                         android:textSize="16sp"
                         android:textColor="@android:color/white" />
 
@@ -163,7 +163,7 @@
             <fragment android:id="@+id/autocomplete_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/input_field_height"
-                android:fontFamily="@font/montserrat"
+                android:fontFamily="@font/josefin_sans"
                 android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                 />
 
