--- a/app/src/main/res/layout/buy_inputs_merchant_product_card.xml
+++ b/app/src/main/res/layout/buy_inputs_merchant_product_card.xml
@@ -17,7 +17,7 @@
             android:gravity="start"
             android:text="Product name"
             android:textSize="12sp"
-            android:fontFamily="@font/montserrat"
+            android:fontFamily="@font/josefin_sans"
             android:textAllCaps="false"
             />
 
@@ -28,7 +28,7 @@
             android:layout_weight="2.5"
             android:text="UGX 2000"
             android:textSize="12sp"
-            android:fontFamily="@font/montserrat"
+            android:fontFamily="@font/josefin_sans"
             android:textAllCaps="false"
             />
 
