--- a/app/src/main/res/layout/buy_inputs_product_description.xml
+++ b/app/src/main/res/layout/buy_inputs_product_description.xml
@@ -243,7 +243,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginLeft="10dp"
 
-                        android:background="@drawable/toggle_ic_favorite"
+                        android:background="@drawable/ic_favorite"
                         android:textOff=""
                         android:textOn="" />
 
