--- a/app/src/main/res/layout/fragment_farm_records_home.xml
+++ b/app/src/main/res/layout/fragment_farm_records_home.xml
@@ -99,6 +99,7 @@
                                     android:layout_gravity="top"
                                     android:gravity="center"
                                     android:paddingBottom="5dp"
+                                    android:fontFamily="@font/josefin_sans_semibold"
                                     android:text="@string/label_croprecords"
                                     android:textAllCaps="true"
                                     android:textColor="#000000"
@@ -143,7 +144,7 @@
                                     android:layout_gravity="top"
                                     android:gravity="center"
                                     android:paddingBottom="5dp"
-
+                                    android:fontFamily="@font/josefin_sans_semibold"
                                     android:text="@string/label_livestockrecords"
                                     android:textAllCaps="true"
                                     android:textColor="#000"
@@ -183,6 +184,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="top"
+                                    android:fontFamily="@font/josefin_sans_semibold"
                                     android:gravity="center"
                                     android:paddingBottom="5dp"
                                     android:text="@string/label_store"
@@ -226,6 +228,7 @@
                                     android:layout_gravity="top"
                                     android:gravity="center"
                                     android:paddingBottom="5dp"
+                                    android:fontFamily="@font/josefin_sans_semibold"
                                     android:text="@string/label_financial_records"
                                     android:textAllCaps="true"
                                     android:textColor="#000"
