--- a/app/src/main/res/layout/layout_product_0_list_lg.xml
+++ b/app/src/main/res/layout/layout_product_0_list_lg.xml
@@ -175,7 +175,7 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:background="@drawable/toggle_ic_favorite"
+            android:background="@drawable/ic_favorite"
             android:textOff=""
             android:textOn="" />
 
@@ -205,6 +205,7 @@
         android:paddingBottom="40dp"
         android:scaleType="center"
         android:src="@drawable/checked"
-        android:tint="@color/white" />
+        android:visibility="gone"
+        app:tint="@color/white" />
 
 </androidx.cardview.widget.CardView>
