--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -242,7 +242,7 @@
                                 android:layout_height="20.27dp"
                                 android:layout_gravity="center|start"
                                 android:layout_margin="@dimen/dimen_10dp"
-                                android:src="@drawable/ic_cart"
+                                android:src="@drawable/ic_cart_empty"
                                 app:tint="@color/colorPrimary" />
 
                             <TextView
