--- a/app/src/main/res/drawable/toggle_ic_cart.xml
+++ b/app/src/main/res/drawable/toggle_ic_cart.xml
@@ -2,10 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@drawable/ic_cart_full"
+        android:drawable="@drawable/ic_shopping_cart_18dp"
         android:gravity="center" />
 
-    <!-- set a place holder Drawable so android:drawable isn't null -->
+    <!-- set a place holder Drawable so android:drawable isn't null ic_cart_empty-->
     <item
         android:id="@+id/ic_badge"
         android:drawable="@drawable/ic_cart_empty" />
